# PythonID-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-checks.yml
src/bot/: config.py  constants.py  main.py
src/bot/database/: models.py  service.py
src/bot/handlers/: captcha.py  dm.py  message.py  verify.py
src/bot/services/: captcha_recovery.py  scheduler.py  telegram_utils.py  user_checker.py
tests/: test_config.py  test_dm_handler.py  test_message_handler.py  test_photo_verification.py  test_scheduler.py  test_telegram_utils.py  test_user_checker.py  test_verify_handler.py
